# polars-candle

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  pyproject.toml
.fleet/: run.json
.github/workflows/: ci.yml
polars_candle/: __init__.py  candle_ext.py
scripts/: bump.sh
src/: build.rs  lib.rs
src/candle_ext/: embed.rs  mod.rs  translate.rs  utils.rs
tests/: test_candle.py
