[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "polars_candle"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]


[dependencies]
polars = ">=0.20.0"

[dev-dependencies]
pytest = "*"
black = "*"
ruff = "*"
mypy = "*"
maturin = "*"

[tool.poetry]
name = "polars_candle"
version = "0.1.0"
description = "A text embedding extension for the Polars Dataframe library."
keywords = ["polars", "dataframe", "embedding", "nlp", "candle"]
authors = ["Wouter Doppenberg <wouterdoppenberg@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
polars = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "*"
ruff = "*"
mypy = "*"
maturin = "*"
