[tool.poetry]
name = "polars_candle"
version = "0.1.5"
description = "A text embedding extension for the Polars Dataframe library."
keywords = ["polars", "dataframe", "embedding", "nlp", "candle"]
authors = ["Wouter Doppenberg <wouterdoppenberg@gmail.com>"]
license = "Apache-2.0"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
urls = { repository = "https://github.com/wdoppenberg/polars-candle" }


[tool.poetry.dependencies]
python = "^3.8"
polars = "^0.20.0"

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"
mypy = "*"
maturin = "*"
pytest = "*"
polars-distance = "*"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"